--- a/twitter-to-kafka/src/main/resources/application.properties
+++ b/twitter-to-kafka/src/main/resources/application.properties
@@ -1,2 +1,13 @@
 server.port=8081
 spring.webflux.request.timeout=0
+
+# Kafka Configuration
+spring.kafka.bootstrap-servers=localhost:9092, localhost:9093, localhost:9094
+kafka.topic.twitter-tweets=twitter-tweets
+
+# Kafka Producer Properties
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.acks=all
+spring.kafka.producer.retries=3
+spring.kafka.producer.properties.spring.json.add.type.headers=false
