--- a/twitter-mock/src/main/resources/application.properties
+++ b/twitter-mock/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=8080
 spring.application.name=twitter-mock
-spring.ai.ollama.api.base-url=http://localhost:11434
-spring.ai.ollama.chat.options.model=gemma3
+spring.ai.ollama.base-url=http://ollama:11434
+spring.ai.ollama.chat.options.model=gemma3:4b
