--- a/twitter-to-kafka/pom.xml
+++ b/twitter-to-kafka/pom.xml
@@ -47,6 +47,7 @@
         <dependency>
             <groupId>com.devhub.microservices</groupId>
             <artifactId>twitter-mock</artifactId>
+            <version>0.0.3-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
