--- a/twitter-to-kafka/src/main/resources/application.properties
+++ b/twitter-to-kafka/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 server.port=8081
 spring.webflux.request.timeout=0
 
+# Twitter Mock Configuration
+twitter.mock.url=http://localhost:8080/twitter-stream
+
 # Kafka Configuration
 spring.kafka.bootstrap-servers=localhost:9092, localhost:9093, localhost:9094
 kafka.topic.twitter-tweets=twitter-tweets
