--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,19 @@
 	</scm>
 	<properties>
 		<spring-boot.version>3.5.7</spring-boot.version>
+		<spring-cloud.version>2025.0.1</spring-cloud.version>
 		<java.version>21</java.version>
 		<lombok.version>1.18.30</lombok.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
 			<dependency>
 				<groupId>org.projectlombok</groupId>
 				<artifactId>lombok</artifactId>
@@ -106,6 +114,7 @@
     <modules>
         <module>twitter-mock</module>
 		<module>twitter-to-kafka</module>
-	</modules>
+        <module>spring-cloud-config</module>
+    </modules>
 
 </project>
